--- a/mservices/assets/css/index.css
+++ b/mservices/assets/css/index.css
@@ -3,15 +3,36 @@
 ======================================================= */
 
 #hero {
-    height: 600px;
-    background: linear-gradient(360deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/32.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    height: 700px;
+    animation: 50s slide infinite ease-in-out;
+}
+
+@keyframes slide {
+    0%, 100% {
+        background: linear-gradient(360deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/34.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+    }
+    55% {
+        background: linear-gradient(360deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/33.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+    }
+    75% {
+        background: linear-gradient(360deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/32.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+    }
 }
 
 #hero .hero-text {
-    margin-top: 80px;
+    margin-top: 120px;
     width: 20%;
     color: #fff;
 }
@@ -29,6 +50,50 @@
     text-decoration: none;
 }
 
+#hero .social {
+    position: fixed;
+    z-index: 10;
+    margin-top: 200px;
+    right: 0;
+    margin-right: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+    gap: 1.5rem;
+}
+
+#hero .social a {
+    color: #ddd;
+    font-size: 25px;
+    text-decoration: none;
+    transition: all .3s;
+}
+
+#hero .social a:hover {
+    color: var(--redish-color);
+}
+
+#hero .social::before {
+    content: '';
+    position: absolute;
+    top: 1;
+    margin-top: -280px;
+    width: 3px;
+    height: 50px;
+    background: #ddd;
+}
+
+#hero .social::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    margin-top: 223px;
+    width: 3px;
+    height: 50px;
+    background: #ddd;
+}
+
 /* ==== Media Queries ==== */
 
 @media only screen and (max-width: 768px) {
@@ -44,8 +109,42 @@
         width: 100%;
         font-size: 18px;
     }
+    #hero .social {
+        position: relative;
+        margin-top: -15px;
+        margin-right: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: row nowrap;
+        gap: 1.5rem;
+    }
+    #hero .social::before {
+        content: '';
+        position: absolute;
+        top: 1;
+        margin-top: 0px;
+        margin-right: 220px;
+        width: 30px;
+        height: 3px;
+        background: #ddd;
+    }
+    #hero .social::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        margin-top: 16px;
+        margin-left: 220px;
+        width: 30px;
+        height: 3px;
+        background: #ddd;
+    }
 }
+
 @media only screen and (max-width: 576px) {
+    #hero {
+        height: 700px;
+    }
     #hero .hero-text {
         margin-top: 10px;
         width: 100%;
@@ -59,6 +158,7 @@
         font-size: 18px;
     }
 }
+
 @media only screen and (max-width: 300px) {
     #hero .hero-text h1 {
         line-height: 3.5rem;
@@ -67,3 +167,293 @@
 }
 
 /* ==== End Queries ==== */
+
+/* =======================================================
+# main | Maintenance
+======================================================= */
+
+#maintenance {
+    padding: 90px 0;
+}
+
+#maintenance .maintain-img img {
+    width: 430px;
+}
+
+#maintenance .maintain-text h1 {
+    margin-top: -70px;
+    line-height: 6.5rem;
+}
+
+#maintenance .maintain-text p {
+    margin-top: -70px;
+    line-height: 1.5rem;
+    font-size: 18px;
+}
+
+/* =======================================================
+# main | Commercial
+======================================================= */
+
+#commercial {
+    height: 500px;
+    animation: 50s slider infinite ease-in-out;
+}
+
+@keyframes slider {
+    0%, 100% {
+        background: linear-gradient(360deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/48.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+    }
+    25% {
+        background: linear-gradient(360deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/49.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+    }
+    55% {
+        background: linear-gradient(360deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/45.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+    }
+    75% {
+        background: linear-gradient(360deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/46.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+    }
+    95% {
+        background: linear-gradient(360deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/50.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+    }
+}
+
+#commercial .commercial-text {
+    text-align: center;
+    margin-top: 100px;
+    width: 100%;
+    color: #fff;
+}
+
+#commercial .commercial-text p {
+    margin-top: -25px;
+    width: 100%;
+    font-size: 18px;
+    color: #ddd;
+    line-height: 1.5rem;
+}
+
+#commercial .commercial-text .btn {
+    margin-top: 15px;
+    text-decoration: none;
+}
+
+#commercial .social {
+    position: absolute;
+    margin-top: 200px;
+    right: 0;
+    margin-right: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+    gap: 1.5rem;
+}
+
+#commercial .social a {
+    color: #ddd;
+    font-size: 25px;
+    text-decoration: none;
+    transition: all .3s;
+}
+
+#commercial .social a:hover {
+    color: var(--redish-color);
+}
+
+#commercial .social::before {
+    content: '';
+    position: absolute;
+    top: 1;
+    margin-top: -280px;
+    width: 3px;
+    height: 50px;
+    background: #ddd;
+}
+
+#commercial .social::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    margin-top: 223px;
+    width: 3px;
+    height: 50px;
+    background: #ddd;
+}
+
+/* ==== Media Queries ==== */
+
+@media only screen and (max-width: 768px) {
+    #commercial .commercial-text {
+        margin-top: 100px;
+        width: 100%;
+    }
+    #commercial .commercial-text h1 {
+        line-height: 4.0rem;
+    }
+    #commercial .commercial-text p {
+        margin-top: -25px;
+        width: 100%;
+        font-size: 18px;
+    }
+    #commercial .social {
+        position: relative;
+        margin-top: -15px;
+        margin-right: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: row nowrap;
+        gap: 1.5rem;
+    }
+    #commercial .social::before {
+        content: '';
+        position: absolute;
+        top: 1;
+        margin-top: 0px;
+        margin-right: 220px;
+        width: 30px;
+        height: 3px;
+        background: #ddd;
+    }
+    #commercial .social::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        margin-top: 16px;
+        margin-left: 220px;
+        width: 30px;
+        height: 3px;
+        background: #ddd;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    #commercial {
+        height: 700px;
+    }
+    #commercial .commercial-text {
+        margin-top: 10px;
+        width: 100%;
+    }
+    #commercial .commercial-text h1 {
+        line-height: 4.0rem;
+    }
+    #commercial .commercial-text p {
+        margin-top: -25px;
+        width: 100%;
+        font-size: 18px;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    #commercial .commercial-text h1 {
+        line-height: 3.5rem;
+        font-size: 40px;
+    }
+}
+
+/* ==== End Queries ==== */
+
+/* =======================================================
+# main | Testimonials
+======================================================= */
+
+#testimonials {
+    padding-top: 60px;
+    padding-bottom: 120px;
+    background: linear-gradient(360deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/80.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+#testimonials h1 {
+    color: var(--light-gray-color);
+    line-height: 1.5rem;
+    position: relative;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+#testimonials h1::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 6px;
+    top: 1;
+    margin-left: 28px;
+    margin-top: 80px;
+    background: var(--danger-color);
+}
+
+#testimonials .card {
+    padding: 20px 30px;
+    position: relative;
+}
+
+#testimonials .card img {
+    position: absolute;
+    top: -30px;
+    right: -10px;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    z-index: 10;
+}
+
+#testimonials .rate-name small {
+    font-weight: bold;
+}
+
+/* =======================================================
+# main | Partners
+======================================================= */
+
+#partners {
+    padding-top: 60px;
+    padding-bottom: 120px;
+}
+
+#partners h1 {
+    line-height: 1.5rem;
+    position: relative;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+#partners h1::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 6px;
+    top: 1;
+    margin-left: 5px;
+    margin-top: 60px;
+    background: var(--danger-color);
+}
+
+#partners img {
+    width: 250px;
+}
